force-app/main/default/objects/Quote__c/fields/Dyn_Grp_Available_Formula__c.field-meta.xml
<CustomField>
    <fullName>Dyn_Grp_Available_Formula__c</fullName>
    <formula>IF( ISBLANK(Dynamic_Group_No__c) , &apos;&apos;, &apos;Y&apos;)</formula>
    <label>Dyn Grp Available Formula</label>
    <type>Text</type>
</CustomField>