force-app/main/default/objects/Quote__c/fields/Dynamic_Group_No__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Group_No__c</fullName>
    <label>Dynamic Group No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>