force-app/main/default/objects/Quote__c/fields/EcoCareAssetCount__c.field-meta.xml
<CustomField>
    <fullName>EcoCareAssetCount__c</fullName>
    <description>Contain the Summation of the number of EcoCare Assets within the Quotation which is utilized to calculate the discount.</description>
    <label>Eco Care Asset Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>