force-app/main/default/objects/Quote__c/fields/EcoCareMarketMultiplier__c.field-meta.xml
<CustomField>
    <fullName>EcoCareMarketMultiplier__c</fullName>
    <description>Contains the EcoCare Multiplier used to obtain pricing for Eco Care Lines</description>
    <label>Eco Care Market Multiplier</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>