force-app/main/default/objects/Quote__c/fields/End_User_Statement__c.field-meta.xml
<CustomField>
    <fullName>End_User_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SADOC-1292</description>
    <label>End User Statement</label>
    <type>Checkbox</type>
</CustomField>