force-app/main/default/objects/Quote__c/fields/ERP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Number__c</fullName>
    <description>Q2C Number from Agreement.</description>
    <label>ERP Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>