force-app/main/default/objects/Quote__c/fields/Escalate_Comments__c.field-meta.xml
<CustomField>
    <fullName>Escalate_Comments__c</fullName>
    <label>Escalate Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>