force-app/main/default/objects/Quote__c/fields/Escalation_Checked__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Checked__c</fullName>
    <label>Escalation Checked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>