force-app/main/default/objects/Quote__c/fields/EstimatedDrawingsRequiredDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDrawingsRequiredDate__c</fullName>
    <description>This field is use to estimate the drawing required
Updated field not as required by Atul.</description>
    <label>EstimatedDrawingsRequiredDate</label>
    <type>Date</type>
</CustomField>