force-app/main/default/objects/Quote__c/fields/Exclude_from_Reauthorization__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Reauthorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAZ-51: To mark the quote to not be eligible for reauthorization to allow me to review the deal each time it is submitted for authorization.</description>
    <label>Exclude from Reauthorization</label>
    <type>Checkbox</type>
</CustomField>