force-app/main/default/objects/Quote__c/fields/ExcludeFailedQuote__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFailedQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExcludeFailedQuote</label>
    <type>Checkbox</type>
</CustomField>