force-app/main/default/objects/Quote__c/fields/Export_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Export_Checkbox__c</fullName>
    <formula>Opportunity_Name__r.Export_Checkbox__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Export Checkbox</label>
    <type>Checkbox</type>
</CustomField>