force-app/main/default/objects/Quote__c/fields/Export_Code__c.field-meta.xml
<CustomField>
    <fullName>Export_Code__c</fullName>
    <label>Export Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>