force-app/main/default/objects/Quote__c/fields/Export_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Export_Code_Formula__c</fullName>
    <formula>IF(ISPICKVAL( Quote_Type__c , &quot;General Sales&quot;), &quot;N&quot;, 
IF(ISPICKVAL( Quote_Type__c , &quot;Global sales&quot;), &quot;&quot;, 
IF(ISPICKVAL( Quote_Type__c , &quot;National sales&quot;), &quot;&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export Indicator</label>
    <type>Text</type>
</CustomField>