force-app/main/default/objects/Quote__c/fields/Export_Code_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Export_Code_Proposal__c</fullName>
    <formula>TEXT(Opportunity_Name__r.Export_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export Code(Proposal)</label>
    <type>Text</type>
</CustomField>