force-app/main/default/objects/Quote__c/fields/Export_Comments__c.field-meta.xml
<CustomField>
    <fullName>Export_Comments__c</fullName>
    <description>These are notes that either the Project Manager or Export Compliance officer can create.</description>
    <inlineHelpText>Comments created by either the project manager or the export compliance officer</inlineHelpText>
    <label>Export Comments</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>