force-app/main/default/objects/Quote__c/fields/Export_Type__c.field-meta.xml
<CustomField>
    <fullName>Export_Type__c</fullName>
    <label>ZZ_Not Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>