force-app/main/default/objects/Quote__c/fields/ExportType__c.field-meta.xml
<CustomField>
    <fullName>ExportType__c</fullName>
    <label>Export Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Direct Export</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Domestic Export</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Affiliate Replenishment</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Affiliate Pass-Through</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>International Purchase/Domestic Ship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>