force-app/main/default/objects/Quote__c/fields/Ext_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ext_Contact__c</fullName>
    <label>Ext Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>