force-app/main/default/objects/Quote__c/fields/Ext_Contact_eMail__c.field-meta.xml
<CustomField>
    <fullName>Ext_Contact_eMail__c</fullName>
    <label>Ext Contact_eMail</label>
    <type>Email</type>
</CustomField>