force-app/main/default/objects/Quote__c/fields/Ext_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ext_Contact_Phone__c</fullName>
    <label>Ext Contact Phone</label>
    <type>Phone</type>
</CustomField>