force-app/main/default/objects/Quote__c/fields/Ext_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Ext_Contact_Role__c</fullName>
    <label>Ext Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>