force-app/main/default/objects/Quote__c/fields/Extended_Details__c.field-meta.xml
<CustomField>
    <fullName>Extended_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended Details</label>
    <type>Checkbox</type>
</CustomField>