force-app/main/default/objects/Quote__c/fields/Extended_Profile_Price__c.field-meta.xml
<CustomField>
    <fullName>Extended_Profile_Price__c</fullName>
    <label>Extended Profile Price</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>