force-app/main/default/objects/Quote__c/fields/ExtendedBookPriceSummary__c.field-meta.xml
<CustomField>
    <fullName>ExtendedBookPriceSummary__c</fullName>
    <description>Hold book price for all line items from the quote (with or without relationship with Project)</description>
    <label>Extended Book Price Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>