force-app/main/default/objects/Quote__c/fields/External_System_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>External_System_Reference_Id__c</fullName>
    <externalId>true</externalId>
    <label>External System Reference Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>