force-app/main/default/objects/Quote__c/fields/External_System_Rev_Number__c.field-meta.xml
<CustomField>
    <fullName>External_System_Rev_Number__c</fullName>
    <label>External System Rev Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>