force-app/main/default/objects/Quote__c/fields/External_System_Source__c.field-meta.xml
<CustomField>
    <fullName>External_System_Source__c</fullName>
    <label>External System Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LayoutFAST</fullName>
                <label>LayoutFast</label>
            </value>
            <value>
                <fullName>Seamless</fullName>
            </value>
            <value>
                <fullName>SAPImportQ2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>