force-app/main/default/objects/Quote__c/fields/FederalFundingCompliancyLevel__c.field-meta.xml
<CustomField>
    <fullName>FederalFundingCompliancyLevel__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <description>Federal Funding Compliancy Level Integer Value</description>
    <label>Federal Funding Compliancy Level</label>
    <length>18</length>
    <type>Text</type>
</CustomField>