force-app/main/default/objects/Quote__c/fields/FederalFundingCompliancyRequirement__c.field-meta.xml
<CustomField>
    <fullName>FederalFundingCompliancyRequirement__c</fullName>
    <description>Federal Funding Compliancy Level for the quotation</description>
    <label>Federal Funding Compliancy Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAA</fullName>
            </value>
            <value>
                <fullName>BABA</fullName>
            </value>
            <value>
                <fullName>BAA - COTS</fullName>
            </value>
            <value>
                <fullName>TAA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>