force-app/main/default/objects/Quote__c/fields/Finalization_Date__c.field-meta.xml
<CustomField>
    <fullName>Finalization_Date__c</fullName>
    <label>Finalization Date</label>
    <type>DateTime</type>
</CustomField>