force-app/main/default/objects/Quote__c/fields/FinalOrderSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>FinalOrderSubmitDate__c</fullName>
    <description>This field will track the final time the user submits the quote to an order. The user could have to submit the quote again if there is an Order Submit Failure.</description>
    <inlineHelpText>This field will track the final time the user submits the quote to an order. The user could have to submit the quote again if there is an Order Submit Failure.</inlineHelpText>
    <label>Final Order Submit Date</label>
    <type>DateTime</type>
</CustomField>