force-app/main/default/objects/Quote__c/fields/FOBRequestedIndicator__c.field-meta.xml
<CustomField>
    <fullName>FOBRequestedIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOB - If any of the lines in LiG contain a FOB Point value of &quot;Shipping Point&quot;, &quot;Free Delivery Point&quot;, or &quot;Other&quot; then &quot;FOBRequestedIndicator&quot; and &quot;FOBAcceptedIndicator&quot; should be set to &quot;Y&quot;</description>
    <inlineHelpText>FOB - If any of the lines in LiG contain a FOB Point value of &quot;Shipping Point&quot;, &quot;Free Delivery Point&quot;, or &quot;Other&quot; then &quot;FOBRequestedIndicator&quot; and &quot;FOBAcceptedIndicator&quot; should be set to &quot;Y&quot;</inlineHelpText>
    <label>FOBRequestedIndicator</label>
    <type>Checkbox</type>
</CustomField>