force-app/main/default/objects/Quote__c/fields/FxRate__c.field-meta.xml
<CustomField>
    <fullName>FxRate__c</fullName>
    <label>FxRate</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>