force-app/main/default/objects/Quote__c/fields/Hot__c.field-meta.xml
<CustomField>
    <fullName>Hot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hot Indicator</description>
    <label>Hot</label>
    <type>Checkbox</type>
</CustomField>