force-app/main/default/objects/Quote__c/fields/If_Strategic_Account__c.field-meta.xml
<CustomField>
    <fullName>If_Strategic_Account__c</fullName>
    <description>Strategy Account Indicator</description>
    <formula>IF( TEXT(Bill_To_Name__r.AccountRole__c)==&apos;Strategic Account&apos; , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>If Strategic Account?</label>
    <type>Checkbox</type>
</CustomField>