force-app/main/default/objects/Quote__c/fields/Include_LineItem__c.field-meta.xml
<CustomField>
    <fullName>Include_LineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include LineItem</label>
    <type>Checkbox</type>
</CustomField>