force-app/main/default/objects/Quote__c/fields/Include_Signature__c.field-meta.xml
<CustomField>
    <fullName>Include_Signature__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Signature</label>
    <type>Checkbox</type>
</CustomField>