force-app/main/default/objects/Quote__c/fields/Incoterms_Code__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_Code__c</fullName>
    <label>Incoterms Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFR</fullName>
                <label>CFR – Cost and Freight (named port of destination)</label>
            </value>
            <value>
                <fullName>CIF</fullName>
                <label>CIF – Cost, Insurance and Freight (named port of destination)</label>
            </value>
            <value>
                <fullName>CIP</fullName>
                <label>CIP – Carriage and Insurance Paid to (named place)</label>
            </value>
            <value>
                <fullName>CPT</fullName>
                <label>CPT – Carriage Paid to (named place)</label>
            </value>
            <value>
                <fullName>DAP</fullName>
                <label>DAP – Delivered at Place (named place of destination)</label>
            </value>
            <value>
                <fullName>DAT</fullName>
                <label>DAT – Delivered at Terminal (named place of destination)</label>
            </value>
            <value>
                <fullName>DDP</fullName>
                <label>DDP – Delivered Duty Paid (named place of destination)</label>
            </value>
            <value>
                <fullName>EXW</fullName>
                <label>EXW – EX-Works (named place)</label>
            </value>
            <value>
                <fullName>FAS</fullName>
                <label>FAS – Free Alongside Ship (named port of shipment)</label>
            </value>
            <value>
                <fullName>FCA</fullName>
                <label>FCA – Free Carrier (named place)</label>
            </value>
            <value>
                <fullName>FOB</fullName>
                <label>FOB – Free On Board (named port of shipment)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>