force-app/main/default/objects/Quote__c/fields/Incoterms_Named_Place__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_Named_Place__c</fullName>
    <label>Incoterms Named Place</label>
    <length>30</length>
    <type>Text</type>
</CustomField>