force-app/main/default/objects/Quote__c/fields/InitialOrderSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>InitialOrderSubmitDate__c</fullName>
    <description>This field will track the time the user first submits the quote to an order</description>
    <inlineHelpText>This field will track the time the user first submits the quote to an order</inlineHelpText>
    <label>Initial Order Submit Date</label>
    <type>DateTime</type>
</CustomField>