force-app/main/default/objects/Quote__c/fields/Instructions_To_Consolidator__c.field-meta.xml
<CustomField>
    <fullName>Instructions_To_Consolidator__c</fullName>
    <label>Instructions To Consolidator</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>