force-app/main/default/objects/Quote__c/fields/Instructions_To_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Instructions_To_Shipping__c</fullName>
    <label>Instructions To Shipping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>