force-app/main/default/objects/Quote__c/fields/Is_Approval_without_service__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_without_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval without adding service?</label>
    <type>Checkbox</type>
</CustomField>