force-app/main/default/objects/Quote__c/fields/Is_Cloning_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Is_Cloning_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cloning In Progress</label>
    <type>Checkbox</type>
</CustomField>