force-app/main/default/objects/Quote__c/fields/Is_Comm_Stream_Inserted__c.field-meta.xml
<CustomField>
    <fullName>Is_Comm_Stream_Inserted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-157-Indicate whether communication stream is inserted or not by Price Manger through Quote Level Approval.</description>
    <label>Is Comm Stream Inserted</label>
    <type>Checkbox</type>
</CustomField>