force-app/main/default/objects/Quote__c/fields/Is_Deal_Manager_Down_When_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deal_Manager_Down_When_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deal Manager Down When Submitted?</label>
    <type>Checkbox</type>
</CustomField>