force-app/main/default/objects/Quote__c/fields/Is_External_Quote_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Quote_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External Quote Locked</label>
    <type>Checkbox</type>
</CustomField>