force-app/main/default/objects/Quote__c/fields/Is_Manual_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will determine the type of pricing for Quote Line Items. Default value will be auto pricing, unless user chooses otherwise from Quote detail page</description>
    <label>Is Manual Pricing</label>
    <type>Checkbox</type>
</CustomField>