force-app/main/default/objects/Quote__c/fields/Is_Scheduling_Required_After_Clone__c.field-meta.xml
<CustomField>
    <fullName>Is_Scheduling_Required_After_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scheduling Required After Clone</label>
    <type>Checkbox</type>
</CustomField>