force-app/main/default/objects/Quote__c/fields/IsDocumentPurposeOnly__c.field-meta.xml
<CustomField>
    <fullName>IsDocumentPurposeOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quote is intended for Documentation Purposes Only</description>
    <label>Document Purpose Only</label>
    <type>Checkbox</type>
</CustomField>