force-app/main/default/objects/Quote__c/fields/isFinalQuoteGenerated__c.field-meta.xml
<CustomField>
    <fullName>isFinalQuoteGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFinalQuoteGenerated</label>
    <type>Checkbox</type>
</CustomField>