force-app/main/default/objects/Quote__c/fields/IsLineItemInsert__c.field-meta.xml
<CustomField>
    <fullName>IsLineItemInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to capture the state if any Quote LineItem is inserted.</description>
    <label>IsLineItemInsert</label>
    <type>Checkbox</type>
</CustomField>