force-app/main/default/objects/Quote__c/fields/IsLineItemUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsLineItemUpdate__c</fullName>
    <description>This field is used to capture the update event on LineItem.</description>
    <label>IsLineItemUpdate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>