force-app/main/default/objects/Quote__c/fields/isQuoteShareable__c.field-meta.xml
<CustomField>
    <fullName>isQuoteShareable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAQM-4780,4790</description>
    <label>Shareable Quote?</label>
    <type>Checkbox</type>
</CustomField>