force-app/main/default/objects/Quote__c/fields/Issuecategory__c.field-meta.xml
<CustomField>
    <fullName>Issuecategory__c</fullName>
    <description>Issue category field is used in Technical detail</description>
    <label>Issuecategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>