force-app/main/default/objects/Quote__c/fields/ITAR_del__c.field-meta.xml
<CustomField>
    <fullName>ITAR_del__c</fullName>
    <label>ITAR</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>US_Government_Classification__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>