force-app/main/default/objects/Quote__c/fields/Job_amount__c.field-meta.xml
<CustomField>
    <fullName>Job_amount__c</fullName>
    <description>CPQPDAQ-102 - Entering a job amount will set all line items line item request amounts to 0.</description>
    <label>Job Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>