force-app/main/default/objects/Quote__c/fields/Job_Site_Information__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_Information__c</fullName>
    <description>This field is used to capture the technical acknowledgement from MuleSoft during order submit process like ‘Sample Message: Delivered successfully to SAP PI’ etc.,</description>
    <label>Technical Acknowledgement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>