force-app/main/default/objects/Quote__c/fields/Last_Pricing_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Pricing_Update__c</fullName>
    <label>Last Pricing Update</label>
    <type>DateTime</type>
</CustomField>