force-app/main/default/objects/Quote__c/fields/Last_Proposal_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Proposal_Generation_Date__c</fullName>
    <label>Last Proposal Generation Date</label>
    <type>DateTime</type>
</CustomField>