force-app/main/default/objects/Quote__c/fields/Last_Zilliant_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Zilliant_Call__c</fullName>
    <label>Last Zilliant Call</label>
    <type>DateTime</type>
</CustomField>