force-app/main/default/objects/Quote__c/fields/Last_Zilliant_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Zilliant_Error_Message__c</fullName>
    <label>Last Zilliant Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>