force-app/main/default/objects/Quote__c/fields/Last_Zilliant_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Zilliant_Status__c</fullName>
    <label>Last Zilliant Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>