force-app/main/default/objects/Quote__c/fields/LastRecommendBookPrice__c.field-meta.xml
<CustomField>
    <fullName>LastRecommendBookPrice__c</fullName>
    <label>Book Price of Last Recommendation Call</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>