force-app/main/default/objects/Quote__c/fields/Leading_BU__c.field-meta.xml
<CustomField>
    <fullName>Leading_BU__c</fullName>
    <description>Leading BU</description>
    <formula>TEXT(Opportunity_Name__r.Leading_BU__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leading BU</label>
    <type>Text</type>
</CustomField>